err/cheesecake.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Cheesecake-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/cheesecake'...
Compiling './lib/python3.5/site-packages/cheesecake/cheesecake_index.py'...
***   File "./lib/python3.5/site-packages/cheesecake/cheesecake_index.py", line 1598
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cheesecake/codeparser.py'...
***   File "./lib/python3.5/site-packages/cheesecake/codeparser.py", line 150
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cheesecake/logger.py'...
***   File "./lib/python3.5/site-packages/cheesecake/logger.py", line 44
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cheesecake/model.py'...
***   File "./lib/python3.5/site-packages/cheesecake/model.py", line 330
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cheesecake/subprocess.py'...
***   File "./lib/python3.5/site-packages/cheesecake/subprocess.py", line 694
    if (GetVersion() >= 0x80000000L or
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cheesecake/util.py'...
***   File "./lib/python3.5/site-packages/cheesecake/util.py", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
